syntax = "proto3";

import "google/protobuf/empty.proto";

package coordinator;

service Transactions {
  rpc Publish(PublishRequest) returns (google.protobuf.Empty);
}

message PublishRequest {
  string id_address = 1;
  bytes value = 2;
}

service Views {
  rpc GetShares(google.protobuf.Empty) returns (SharesReply);

  rpc GetResponses(google.protobuf.Empty) returns (ResponsesReply);

  rpc GetJustifications(google.protobuf.Empty) returns (JustificationsReply);

  rpc GetParticipants(google.protobuf.Empty) returns (ParticipantsReply);

  rpc GetBlsKeys(google.protobuf.Empty) returns (BlsKeysReply);

  rpc InPhase(google.protobuf.Empty) returns (InPhaseReply);
}

message SharesReply {
  repeated bytes shares = 1;
}

message ResponsesReply {
  repeated bytes responses = 1;
}

message JustificationsReply {
  repeated bytes justifications = 1;
}

message ParticipantsReply {
  repeated string participants = 1;
}

message BlsKeysReply {
  uint32 threshold = 1;
  repeated bytes bls_keys = 2;
}

message InPhaseReply {
  uint32 phase = 1;
}
